解决代码扫描问题